--- a/day1/index.html
+++ b/day1/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="parent">
     <div class="child">
-
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est recusandae accusantium velit molestias quod odio laboriosam voluptatibus illo a dolore quas, aspernatur, esse minus vel, aliquid saepe consequatur eius quasi?
     </div>
   </div>
   
